Removing UserAuthoritiesResolver.java