@@ -1,10 +1,11 @@
 package com.harishkannarao.springsecurityrestapi.security.resolver;
 
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 @Component
@@ -20,7 +21,7 @@ public class UserDetailsResolver {
                             .accountExpired(false)
                             .credentialsExpired(false)
                             .accountLocked(false)
-                            .authorities(Collections.emptyList())
+                            .authorities(List.of(new SimpleGrantedAuthority("ROLE_USER")))
                             .build()
             );
         } else if ("admin-token".equals(token)) {
@@ -32,7 +33,7 @@ public class UserDetailsResolver {
                             .accountExpired(false)
                             .credentialsExpired(false)
                             .accountLocked(false)
-                            .authorities(Collections.emptyList())
+                            .authorities(List.of(new SimpleGrantedAuthority("ROLE_ADMIN")))
                             .build()
             );
         } else {
